# Chat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp
common/: CMakeLists.txt  Listener.cpp  Listener.h  block_queue.h  heads.h  mutex.cpp  mutex.h  singleton.h
server/: CMakeLists.txt  server.cpp  server.h  server_main.cpp
src/: CMakeLists.txt
src/client/: client.cpp  client.h  client_main.cpp
src/common/: CMakeLists.txt  Listener.h  block_queue.h  connector.cpp  connector.h  heads.h  logs.cpp  logs.h  mutex.h  shared_array.h  singleton.h  type_heads.h
src/common/connector/: connect_manager.cpp  connect_manager.h  connector.cpp  connector.h
src/common/message/: defines.h  m_person.cpp  m_person.h  message.cpp  message.h  package.h  person.cpp
src/common/protocol/: test.proto
src/common/protocol/protocol/: test.pb.cc  test.pb.h
src/module/person/: m_person.cpp  m_person.h
src/server/: CMakeLists.txt  server.cpp  server.h  server_main.cpp
test/: CMakeLists.txt  test_proto.cpp
